crates/biome_cli/tests/snapshots/main_cases_inspect_file/prints_the_ast.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome inspect file --ast file.js
```

## `file.js`

```js
function name(value) {
    return value;
}

```

# Emitted Messages

```block
inspect ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Below the information requested.
  
  CST
  
  0: JS_MODULE@0..43
    0: (empty)
    1: (empty)
    2: JS_DIRECTIVE_LIST@0..0
    3: JS_MODULE_ITEM_LIST@0..42
      0: JS_FUNCTION_DECLARATION@0..42
        0: (empty)
        1: FUNCTION_KW@0..9 "function" [] [Whitespace(" ")]
        2: (empty)
        3: JS_IDENTIFIER_BINDING@9..13
          0: IDENT@9..13 "name" [] []
        4: (empty)
        5: JS_PARAMETERS@13..21
          0: L_PAREN@13..14 "(" [] []
          1: JS_PARAMETER_LIST@14..19
            0: JS_FORMAL_PARAMETER@14..19
              0: JS_DECORATOR_LIST@14..14
              1: JS_IDENTIFIER_BINDING@14..19
                0: IDENT@14..19 "value" [] []
              2: (empty)
              3: (empty)
              4: (empty)
          2: R_PAREN@19..21 ")" [] [Whitespace(" ")]
        6: (empty)
        7: JS_FUNCTION_BODY@21..42
          0: L_CURLY@21..22 "{" [] []
          1: JS_DIRECTIVE_LIST@22..22
          2: JS_STATEMENT_LIST@22..40
            0: JS_RETURN_STATEMENT@22..40
              0: RETURN_KW@22..34 "return" [Newline("\n"), Whitespace("    ")] [Whitespace(" ")]
              1: JS_IDENTIFIER_EXPRESSION@34..39
                0: JS_REFERENCE_IDENTIFIER@34..39
                  0: IDENT@34..39 "value" [] []
              2: SEMICOLON@39..40 ";" [] []
          3: R_CURLY@40..42 "}" [Newline("\n")] []
    4: EOF@42..43 "" [Newline("\n")] []
  
  
  AST
  
  JsModule {
      bom_token: missing (optional),
      interpreter_token: missing (optional),
      directives: JsDirectiveList [],
      items: JsModuleItemList [
          JsFunctionDeclaration {
              async_token: missing (optional),
              function_token: FUNCTION_KW@0..9 "function" [] [Whitespace(" ")],
              star_token: missing (optional),
              id: JsIdentifierBinding {
                  name_token: IDENT@9..13 "name" [] [],
              },
              type_parameters: missing (optional),
              parameters: JsParameters {
                  l_paren_token: L_PAREN@13..14 "(" [] [],
                  items: JsParameterList [
                      JsFormalParameter {
                          decorators: JsDecoratorList [],
                          binding: JsIdentifierBinding {
                              name_token: IDENT@14..19 "value" [] [],
                          },
                          question_mark_token: missing (optional),
                          type_annotation: missing (optional),
                          initializer: missing (optional),
                      },
                  ],
                  r_paren_token: R_PAREN@19..21 ")" [] [Whitespace(" ")],
              },
              return_type_annotation: missing (optional),
              body: JsFunctionBody {
                  l_curly_token: L_CURLY@21..22 "{" [] [],
                  directives: JsDirectiveList [],
                  statements: JsStatementList [
                      JsReturnStatement {
                          return_token: RETURN_KW@22..34 "return" [Newline("\n"), Whitespace("    ")] [Whitespace(" ")],
                          argument: JsIdentifierExpression {
                              name: JsReferenceIdentifier {
                                  value_token: IDENT@34..39 "value" [] [],
                              },
                          },
                          semicolon_token: SEMICOLON@39..40 ";" [] [],
                      },
                  ],
                  r_curly_token: R_CURLY@40..42 "}" [Newline("\n")] [],
              },
          },
      ],
      eof_token: EOF@42..43 "" [Newline("\n")] [],
  }
  

```
