crates/biome_cli/tests/snapshots/main_cases_inspect_file/prints_the_semantic_for_css.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome inspect file --semantic file.css
```

## `file.css`

```css
#id {
  font-size: 12px;
}
.class {
  background-color: red;
}
```

# Emitted Messages

```block
inspect ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Below the information requested.
  
  CST
  
  0: CSS_ROOT@0..67
    0: (empty)
    1: CSS_ROOT_ITEM_LIST@0..66
      0: CSS_QUALIFIED_RULE@0..28
        0: CSS_SELECTOR_LIST@0..4
          0: CSS_COMPOUND_SELECTOR@0..4
            0: CSS_NESTED_SELECTOR_LIST@0..0
            1: (empty)
            2: CSS_SUB_SELECTOR_LIST@0..4
              0: CSS_ID_SELECTOR@0..4
                0: HASH@0..1 "#" [] []
                1: CSS_CUSTOM_IDENTIFIER@1..4
                  0: IDENT@1..4 "id" [] [Whitespace(" ")]
        1: CSS_DECLARATION_OR_RULE_BLOCK@4..28
          0: L_CURLY@4..5 "{" [] []
          1: CSS_DECLARATION_OR_RULE_LIST@5..26
            0: CSS_DECLARATION_WITH_SEMICOLON@5..26
              0: CSS_DECLARATION@5..25
                0: CSS_GENERIC_PROPERTY@5..25
                  0: CSS_IDENTIFIER@5..19
                    0: IDENT@5..19 "font-size" [Newline("\n"), Whitespace("    ")] []
                  1: COLON@19..21 ":" [] [Whitespace(" ")]
                  2: CSS_GENERIC_COMPONENT_VALUE_LIST@21..25
                    0: CSS_REGULAR_DIMENSION@21..25
                      0: CSS_NUMBER_LITERAL@21..23 "12" [] []
                      1: IDENT@23..25 "px" [] []
                1: (empty)
              1: SEMICOLON@25..26 ";" [] []
          2: R_CURLY@26..28 "}" [Newline("\n")] []
      1: CSS_QUALIFIED_RULE@28..66
        0: CSS_SELECTOR_LIST@28..36
          0: CSS_COMPOUND_SELECTOR@28..36
            0: CSS_NESTED_SELECTOR_LIST@28..28
            1: (empty)
            2: CSS_SUB_SELECTOR_LIST@28..36
              0: CSS_CLASS_SELECTOR@28..36
                0: DOT@28..30 "." [Newline("\n")] []
                1: CSS_CUSTOM_IDENTIFIER@30..36
                  0: IDENT@30..36 "class" [] [Whitespace(" ")]
        1: CSS_DECLARATION_OR_RULE_BLOCK@36..66
          0: L_CURLY@36..37 "{" [] []
          1: CSS_DECLARATION_OR_RULE_LIST@37..64
            0: CSS_DECLARATION_WITH_SEMICOLON@37..64
              0: CSS_DECLARATION@37..63
                0: CSS_GENERIC_PROPERTY@37..63
                  0: CSS_IDENTIFIER@37..58
                    0: IDENT@37..58 "background-color" [Newline("\n"), Whitespace("    ")] []
                  1: COLON@58..60 ":" [] [Whitespace(" ")]
                  2: CSS_GENERIC_COMPONENT_VALUE_LIST@60..63
                    0: CSS_IDENTIFIER@60..63
                      0: IDENT@60..63 "red" [] []
                1: (empty)
              1: SEMICOLON@63..64 ";" [] []
          2: R_CURLY@64..66 "}" [Newline("\n")] []
    2: EOF@66..67 "" [Newline("\n")] []
  
  
  Semantic model
  
  #id: (1, 0, 0)  @ 0..3
  .class: (0, 1, 0)  @ 29..35
  

```
